--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <script src="background.js"></script>
         <script src="weather.js"></script>
         <script src="calendar.js"></script>
+        <script src="setting.js"></script>
     </body>
 
 </html>
