tooltip and font change

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
         <script type='text/javascript' src='config.js'></script>
 
     </head>
@@ -20,7 +24,9 @@
         </form>
         <h4 class="js-greetings greetings"></h4>
 
-        <button class="share">📆</button>
+        <button class="share">📆
+            <span class="share-tooltip">Share to Google calendar</span>
+        </button>
         <form class="js-toDoForm">
             <input class="todoInput" type="text" placeholder="write a to do"/>
         </form>
