delte the wrong location line

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Momentum </title>
+        <title>My daily desk</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="index.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +15,6 @@
     </head>
 
     <body>
-    <!-- <div class="overlay"> -->
         <div class="js-clock">
             <h1 class="js-title">00:00</h1>
         </div>
@@ -43,7 +42,6 @@
             </div>
         </div>
         <span class="js-weather"></span>
-    <!-- </div> -->
         <script src="clock.js"></script>
         <script src="greeting.js"></script>
         <script src="todo.js"></script>
